--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
-dist
+# dist
 .parcel-cache
 images
-.parcelrc
-.postcssrc
-babel.config.js
+# .parcelrc
+# .postcssrc
+# babel.config.js
