--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "color-name": "^1.1.4",
     "commander": "^7.2.0",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "cosmiconfig": "^9.0.0",
     "css-select": "^5.1.0",
     "css-tree": "^2.3.1",
@@ -38,6 +39,7 @@
     "error-ex": "^1.3.2",
     "escalade": "^3.1.2",
     "escape-string-regexp": "^1.0.5",
+    "express": "^4.19.2",
     "fill-range": "^7.1.1",
     "get-port": "^4.2.0",
     "globals": "^13.24.0",
@@ -83,6 +85,7 @@
     "react-redux": "^9.1.2",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^6.24.0",
+    "react-scripts": "4.0.3",
     "regenerator-runtime": "^0.13.11",
     "resolve-from": "^4.0.0",
     "safe-buffer": "^5.2.1",
@@ -117,6 +120,7 @@
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
+    "build": "react-scripts build",
     "test": "jest"
   },
   "repository": {
@@ -132,5 +136,5 @@
     "url": "https://github.com/Sumitlokhande2002/react-project/issues"
   },
   "homepage": "https://github.com/Sumitlokhande2002/react-project#readme",
-  "proxy": "https://www.swiggy.com"
+  "proxy": "http://backend-server-url"
 }
