--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "react project",
   "dependencies": {
+    "@parcel/transformer-postcss": "^2.12.0",
+    "parcel-bundler": "^1.12.5",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "@reduxjs/toolkit": "^2.2.6",
     "abortcontroller-polyfill": "^1.7.5",
     "ansi-styles": "^4.3.0",
@@ -75,6 +79,7 @@
     "parse-json": "^5.2.0",
     "picocolors": "^1.0.1",
     "picomatch": "^2.3.1",
+    "postcss": "^8.4.40",
     "postcss-value-parser": "^4.2.0",
     "posthtml": "^0.16.6",
     "posthtml-parser": "^0.10.2",
@@ -106,13 +111,13 @@
     "weak-lru-cache": "^1.2.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@testing-library/react": "^16.0.0",
-    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "path-browserify": "^1.0.1",
@@ -120,7 +125,10 @@
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
-    "build": "react-scripts build",
+      "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    
+
     "test": "jest"
   },
   "repository": {
@@ -136,5 +144,17 @@
     "url": "https://github.com/Sumitlokhande2002/react-project/issues"
   },
   "homepage": "https://github.com/Sumitlokhande2002/react-project#readme",
-  "proxy": "http://backend-server-url"
+  "proxy": "http://backend-server-url",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
